--- a/Yameru/Settings/PrefGeneralView.xib
+++ b/Yameru/Settings/PrefGeneralView.xib
@@ -8,28 +8,157 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PrefGeneralVC" customModule="Yameru" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="c22-O7-iKe" id="jvL-hW-K6Z"/>
+                <outlet property="filePathLabel" destination="aAZ-kc-f5Y" id="c7h-iS-rdx"/>
+                <outlet property="previewButton" destination="2sA-QK-pZE" id="bg0-DH-Ido"/>
+                <outlet property="soundDropdown" destination="hFN-bH-Fnd" id="IVF-eD-0Ox"/>
+                <outlet property="view" destination="DbU-zT-SbG" id="TvI-lL-XZ0"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="495" height="355"/>
+        <customView id="DbU-zT-SbG">
+            <rect key="frame" x="0.0" y="0.0" width="510" height="203"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UPh-Fj-QhG">
-                    <rect key="frame" x="221" y="169" width="54" height="18"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="radio" title="Hello" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="szu-Ml-G5d">
-                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                </button>
+                <gridView xPlacement="center" yPlacement="center" rowAlignment="none" rowSpacing="8" columnSpacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GOf-LN-LH2">
+                    <rect key="frame" x="30" y="20" width="450" height="163"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="450" id="vHS-YW-w0d"/>
+                    </constraints>
+                    <rows>
+                        <gridRow id="d2D-RM-fgE"/>
+                        <gridRow id="WFp-wf-oDH"/>
+                        <gridRow yPlacement="top" height="50" id="D2W-Am-p4N"/>
+                        <gridRow yPlacement="center" height="20" id="HCu-n5-LYx"/>
+                        <gridRow id="Yq4-A2-Dhe"/>
+                    </rows>
+                    <columns>
+                        <gridColumn xPlacement="trailing" width="112" id="FVs-La-vbr"/>
+                        <gridColumn xPlacement="leading" id="bDu-0l-gcS"/>
+                    </columns>
+                    <gridCells>
+                        <gridCell row="d2D-RM-fgE" column="FVs-La-vbr" id="afn-kp-h02">
+                            <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zxx-dv-nAT">
+                                <rect key="frame" x="32" y="145" width="82" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Alarm Sound" id="tfJ-8R-4Gk">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </gridCell>
+                        <gridCell row="d2D-RM-fgE" column="bDu-0l-gcS" id="XxS-s5-Yvb">
+                            <popUpButton key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hFN-bH-Fnd">
+                                <rect key="frame" x="120" y="139" width="139" height="25"/>
+                                <popUpButtonCell key="cell" type="push" title="Default" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="czF-UK-3wK" id="4Fx-cg-Gdh">
+                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="menu"/>
+                                    <menu key="menu" id="im4-Cm-EOB">
+                                        <items>
+                                            <menuItem title="Default" state="on" id="czF-UK-3wK">
+                                                <connections>
+                                                    <action selector="defaultClick:" target="-2" id="kjV-zO-rZz"/>
+                                                </connections>
+                                            </menuItem>
+                                            <menuItem title="Custom Sound..." id="i68-G4-yZQ">
+                                                <modifierMask key="keyEquivalentModifierMask"/>
+                                                <connections>
+                                                    <action selector="customSoundClick:" target="-2" id="8T7-lM-zmJ"/>
+                                                </connections>
+                                            </menuItem>
+                                        </items>
+                                    </menu>
+                                </popUpButtonCell>
+                            </popUpButton>
+                        </gridCell>
+                        <gridCell row="WFp-wf-oDH" column="FVs-La-vbr" id="51e-Sz-XLj"/>
+                        <gridCell row="WFp-wf-oDH" column="bDu-0l-gcS" id="vFX-zw-HmF">
+                            <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7GF-pe-K6i">
+                                <rect key="frame" x="120" y="114" width="56" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="File path" id="aAZ-kc-f5Y">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </gridCell>
+                        <gridCell row="D2W-Am-p4N" column="FVs-La-vbr" id="Dk0-eL-bRj"/>
+                        <gridCell row="D2W-Am-p4N" column="bDu-0l-gcS" id="Cwl-3s-gFD">
+                            <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2sA-QK-pZE">
+                                <rect key="frame" x="116" y="74" width="88" height="32"/>
+                                <buttonCell key="cell" type="push" title="Preview" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Z2V-Co-6v6">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="previewClick:" target="-2" id="AhZ-us-dGr"/>
+                                </connections>
+                            </button>
+                        </gridCell>
+                        <gridCell row="HCu-n5-LYx" column="FVs-La-vbr" headOfMergedCell="rrx-MD-0Wi" xPlacement="fill" id="rrx-MD-0Wi">
+                            <box key="contentView" verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="wkH-gh-bXB">
+                                <rect key="frame" x="0.0" y="32" width="450" height="5"/>
+                            </box>
+                        </gridCell>
+                        <gridCell row="HCu-n5-LYx" column="bDu-0l-gcS" headOfMergedCell="rrx-MD-0Wi" id="gcb-yZ-NT6"/>
+                        <gridCell row="Yq4-A2-Dhe" column="FVs-La-vbr" id="VJa-M1-k2w">
+                            <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p2S-19-saD">
+                                <rect key="frame" x="18" y="0.0" width="96" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Alarm Features" id="CvL-yB-azE">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </gridCell>
+                        <gridCell row="Yq4-A2-Dhe" column="bDu-0l-gcS" id="NRG-gQ-l5E">
+                            <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OPK-qG-L13">
+                                <rect key="frame" x="120" y="-1" width="233" height="18"/>
+                                <buttonCell key="cell" type="check" title="Disable USB inputs when activated" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="FJD-M5-M1u">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
+                        </gridCell>
+                    </gridCells>
+                </gridView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="width" constant="495" id="7ML-O4-mZ9"/>
-                <constraint firstAttribute="height" constant="355" id="k8N-dj-2bz"/>
+                <constraint firstItem="GOf-LN-LH2" firstAttribute="top" secondItem="DbU-zT-SbG" secondAttribute="top" constant="20" id="BaT-No-WEr"/>
+                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="GOf-LN-LH2" secondAttribute="trailing" priority="750" constant="30" id="LAb-XM-F9F"/>
+                <constraint firstItem="GOf-LN-LH2" firstAttribute="centerX" secondItem="DbU-zT-SbG" secondAttribute="centerX" id="XKT-Te-FT3"/>
+                <constraint firstItem="GOf-LN-LH2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DbU-zT-SbG" secondAttribute="leading" priority="750" constant="30" id="amE-VW-Njt"/>
+                <constraint firstAttribute="bottom" secondItem="GOf-LN-LH2" secondAttribute="bottom" priority="750" constant="20" id="ncK-2G-Tid"/>
             </constraints>
-            <point key="canvasLocation" x="146.5" y="195.5"/>
+            <point key="canvasLocation" x="105" y="220"/>
         </customView>
+        <button verticalHuggingPriority="750" id="Wpy-f1-af1">
+            <rect key="frame" x="0.0" y="0.0" width="82" height="32"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="2ga-x5-XlU">
+                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                <font key="font" metaFont="system"/>
+            </buttonCell>
+            <point key="canvasLocation" x="110" y="438"/>
+        </button>
+        <button verticalHuggingPriority="750" id="XYX-Om-Bya">
+            <rect key="frame" x="0.0" y="0.0" width="61" height="18"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <buttonCell key="cell" type="radio" title="Radio" bezelStyle="regularSquare" imagePosition="left" alignment="left" inset="2" id="N0E-if-9jp">
+                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                <font key="font" metaFont="system"/>
+            </buttonCell>
+            <point key="canvasLocation" x="111" y="431"/>
+        </button>
+        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="4Nw-bJ-eUv">
+            <rect key="frame" x="0.0" y="0.0" width="37" height="16"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="eTf-G5-caz">
+                <font key="font" usesAppearanceFont="YES"/>
+                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+            </textFieldCell>
+            <point key="canvasLocation" x="166" y="83"/>
+        </textField>
     </objects>
 </document>
