--- a/Yameru/Settings/PrefGeneralView.xib
+++ b/Yameru/Settings/PrefGeneralView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PrefGeneralVC" customModule="Yameru" customModuleProvider="target">
             <connections>
                 <outlet property="filePathLabel" destination="aAZ-kc-f5Y" id="c7h-iS-rdx"/>
+                <outlet property="pinCodeSwitch" destination="vJF-3b-XS2" id="0vm-ZL-biB"/>
                 <outlet property="previewButton" destination="2sA-QK-pZE" id="bg0-DH-Ido"/>
                 <outlet property="soundDropdown" destination="hFN-bH-Fnd" id="IVF-eD-0Ox"/>
                 <outlet property="view" destination="DbU-zT-SbG" id="TvI-lL-XZ0"/>
@@ -16,12 +17,12 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="DbU-zT-SbG">
-            <rect key="frame" x="0.0" y="0.0" width="510" height="203"/>
+        <customView misplaced="YES" id="DbU-zT-SbG">
+            <rect key="frame" x="0.0" y="0.0" width="510" height="211"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <gridView xPlacement="center" yPlacement="center" rowAlignment="none" rowSpacing="8" columnSpacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GOf-LN-LH2">
-                    <rect key="frame" x="30" y="20" width="450" height="163"/>
+                    <rect key="frame" x="30" y="20" width="450" height="194"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="450" id="vHS-YW-w0d"/>
                     </constraints>
@@ -31,6 +32,7 @@
                         <gridRow yPlacement="top" height="50" id="D2W-Am-p4N"/>
                         <gridRow yPlacement="center" height="20" id="HCu-n5-LYx"/>
                         <gridRow id="Yq4-A2-Dhe"/>
+                        <gridRow height="23" id="Eln-CP-WsM"/>
                     </rows>
                     <columns>
                         <gridColumn xPlacement="trailing" width="112" id="FVs-La-vbr"/>
@@ -39,7 +41,7 @@
                     <gridCells>
                         <gridCell row="d2D-RM-fgE" column="FVs-La-vbr" id="afn-kp-h02">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zxx-dv-nAT">
-                                <rect key="frame" x="32" y="145" width="82" height="16"/>
+                                <rect key="frame" x="32" y="176" width="82" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Alarm Sound" id="tfJ-8R-4Gk">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -49,10 +51,10 @@
                         </gridCell>
                         <gridCell row="d2D-RM-fgE" column="bDu-0l-gcS" id="XxS-s5-Yvb">
                             <popUpButton key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hFN-bH-Fnd">
-                                <rect key="frame" x="120" y="139" width="139" height="25"/>
+                                <rect key="frame" x="120" y="170" width="139" height="25"/>
                                 <popUpButtonCell key="cell" type="push" title="Default" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="czF-UK-3wK" id="4Fx-cg-Gdh">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="menu"/>
+                                    <font key="font" metaFont="system"/>
                                     <menu key="menu" id="im4-Cm-EOB">
                                         <items>
                                             <menuItem title="Default" state="on" id="czF-UK-3wK">
@@ -74,7 +76,7 @@
                         <gridCell row="WFp-wf-oDH" column="FVs-La-vbr" id="51e-Sz-XLj"/>
                         <gridCell row="WFp-wf-oDH" column="bDu-0l-gcS" id="vFX-zw-HmF">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7GF-pe-K6i">
-                                <rect key="frame" x="120" y="114" width="56" height="16"/>
+                                <rect key="frame" x="120" y="145" width="56" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="File path" id="aAZ-kc-f5Y">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -85,7 +87,7 @@
                         <gridCell row="D2W-Am-p4N" column="FVs-La-vbr" id="Dk0-eL-bRj"/>
                         <gridCell row="D2W-Am-p4N" column="bDu-0l-gcS" id="Cwl-3s-gFD">
                             <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2sA-QK-pZE">
-                                <rect key="frame" x="116" y="74" width="88" height="32"/>
+                                <rect key="frame" x="116" y="105" width="88" height="32"/>
                                 <buttonCell key="cell" type="push" title="Preview" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Z2V-Co-6v6">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -97,13 +99,13 @@
                         </gridCell>
                         <gridCell row="HCu-n5-LYx" column="FVs-La-vbr" headOfMergedCell="rrx-MD-0Wi" xPlacement="fill" id="rrx-MD-0Wi">
                             <box key="contentView" verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="wkH-gh-bXB">
-                                <rect key="frame" x="0.0" y="32" width="450" height="5"/>
+                                <rect key="frame" x="0.0" y="63" width="450" height="5"/>
                             </box>
                         </gridCell>
                         <gridCell row="HCu-n5-LYx" column="bDu-0l-gcS" headOfMergedCell="rrx-MD-0Wi" id="gcb-yZ-NT6"/>
                         <gridCell row="Yq4-A2-Dhe" column="FVs-La-vbr" id="VJa-M1-k2w">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p2S-19-saD">
-                                <rect key="frame" x="18" y="0.0" width="96" height="16"/>
+                                <rect key="frame" x="18" y="31" width="96" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Alarm Features" id="CvL-yB-azE">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -113,12 +115,37 @@
                         </gridCell>
                         <gridCell row="Yq4-A2-Dhe" column="bDu-0l-gcS" id="NRG-gQ-l5E">
                             <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OPK-qG-L13">
-                                <rect key="frame" x="120" y="-1" width="233" height="18"/>
+                                <rect key="frame" x="120" y="30" width="233" height="18"/>
                                 <buttonCell key="cell" type="check" title="Disable USB inputs when activated" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="FJD-M5-M1u">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                             </button>
+                        </gridCell>
+                        <gridCell row="Eln-CP-WsM" column="FVs-La-vbr" id="mWz-b8-YYY">
+                            <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F6p-jj-tk1">
+                                <rect key="frame" x="53" y="4" width="61" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Pin  code" id="K0d-TA-GIh">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </gridCell>
+                        <gridCell row="Eln-CP-WsM" column="bDu-0l-gcS" id="cjt-gI-L3l">
+                            <segmentedControl key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vJF-3b-XS2">
+                                <rect key="frame" x="120" y="-1" width="92" height="24"/>
+                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="9Ez-FA-Jg2">
+                                    <font key="font" metaFont="system"/>
+                                    <segments>
+                                        <segment label="ON"/>
+                                        <segment label="OFF" selected="YES" tag="1"/>
+                                    </segments>
+                                </segmentedCell>
+                                <connections>
+                                    <action selector="pinCodeSwitch:" target="-2" id="3Uh-qw-gre"/>
+                                </connections>
+                            </segmentedControl>
                         </gridCell>
                     </gridCells>
                 </gridView>
@@ -130,7 +157,7 @@
                 <constraint firstItem="GOf-LN-LH2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DbU-zT-SbG" secondAttribute="leading" priority="750" constant="30" id="amE-VW-Njt"/>
                 <constraint firstAttribute="bottom" secondItem="GOf-LN-LH2" secondAttribute="bottom" priority="750" constant="20" id="ncK-2G-Tid"/>
             </constraints>
-            <point key="canvasLocation" x="105" y="220"/>
+            <point key="canvasLocation" x="105" y="219.5"/>
         </customView>
     </objects>
 </document>
