--- a/Yameru/Settings/PrefGeneralView.xib
+++ b/Yameru/Settings/PrefGeneralView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,22 +17,25 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" id="DbU-zT-SbG">
-            <rect key="frame" x="0.0" y="0.0" width="510" height="211"/>
+        <customView id="DbU-zT-SbG">
+            <rect key="frame" x="0.0" y="0.0" width="510" height="372"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <gridView xPlacement="center" yPlacement="center" rowAlignment="none" rowSpacing="8" columnSpacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GOf-LN-LH2">
-                    <rect key="frame" x="30" y="20" width="450" height="194"/>
+                    <rect key="frame" x="30" y="20" width="450" height="332"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="450" id="vHS-YW-w0d"/>
                     </constraints>
                     <rows>
                         <gridRow id="d2D-RM-fgE"/>
-                        <gridRow id="WFp-wf-oDH"/>
-                        <gridRow yPlacement="top" height="50" id="D2W-Am-p4N"/>
-                        <gridRow yPlacement="center" height="20" id="HCu-n5-LYx"/>
+                        <gridRow height="24" id="WFp-wf-oDH"/>
+                        <gridRow yPlacement="top" height="39" id="D2W-Am-p4N"/>
+                        <gridRow yPlacement="center" height="41" id="HCu-n5-LYx"/>
                         <gridRow id="Yq4-A2-Dhe"/>
+                        <gridRow id="s0v-hZ-1Dl"/>
                         <gridRow height="23" id="Eln-CP-WsM"/>
+                        <gridRow height="30" id="U9s-Qo-HPW"/>
+                        <gridRow height="29" id="q3K-sJ-Ttv"/>
                     </rows>
                     <columns>
                         <gridColumn xPlacement="trailing" width="112" id="FVs-La-vbr"/>
@@ -41,7 +44,7 @@
                     <gridCells>
                         <gridCell row="d2D-RM-fgE" column="FVs-La-vbr" id="afn-kp-h02">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zxx-dv-nAT">
-                                <rect key="frame" x="32" y="176" width="82" height="16"/>
+                                <rect key="frame" x="32" y="314" width="82" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Alarm Sound" id="tfJ-8R-4Gk">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -51,10 +54,10 @@
                         </gridCell>
                         <gridCell row="d2D-RM-fgE" column="bDu-0l-gcS" id="XxS-s5-Yvb">
                             <popUpButton key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hFN-bH-Fnd">
-                                <rect key="frame" x="120" y="170" width="139" height="25"/>
+                                <rect key="frame" x="120" y="308" width="139" height="25"/>
                                 <popUpButtonCell key="cell" type="push" title="Default" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="czF-UK-3wK" id="4Fx-cg-Gdh">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
+                                    <font key="font" metaFont="menu"/>
                                     <menu key="menu" id="im4-Cm-EOB">
                                         <items>
                                             <menuItem title="Default" state="on" id="czF-UK-3wK">
@@ -76,7 +79,7 @@
                         <gridCell row="WFp-wf-oDH" column="FVs-La-vbr" id="51e-Sz-XLj"/>
                         <gridCell row="WFp-wf-oDH" column="bDu-0l-gcS" id="vFX-zw-HmF">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7GF-pe-K6i">
-                                <rect key="frame" x="120" y="145" width="56" height="16"/>
+                                <rect key="frame" x="120" y="283" width="56" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="File path" id="aAZ-kc-f5Y">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -87,7 +90,7 @@
                         <gridCell row="D2W-Am-p4N" column="FVs-La-vbr" id="Dk0-eL-bRj"/>
                         <gridCell row="D2W-Am-p4N" column="bDu-0l-gcS" id="Cwl-3s-gFD">
                             <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2sA-QK-pZE">
-                                <rect key="frame" x="116" y="105" width="88" height="32"/>
+                                <rect key="frame" x="116" y="243" width="88" height="32"/>
                                 <buttonCell key="cell" type="push" title="Preview" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Z2V-Co-6v6">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -99,13 +102,13 @@
                         </gridCell>
                         <gridCell row="HCu-n5-LYx" column="FVs-La-vbr" headOfMergedCell="rrx-MD-0Wi" xPlacement="fill" id="rrx-MD-0Wi">
                             <box key="contentView" verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="wkH-gh-bXB">
-                                <rect key="frame" x="0.0" y="63" width="450" height="5"/>
+                                <rect key="frame" x="0.0" y="201" width="450" height="5"/>
                             </box>
                         </gridCell>
                         <gridCell row="HCu-n5-LYx" column="bDu-0l-gcS" headOfMergedCell="rrx-MD-0Wi" id="gcb-yZ-NT6"/>
                         <gridCell row="Yq4-A2-Dhe" column="FVs-La-vbr" id="VJa-M1-k2w">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p2S-19-saD">
-                                <rect key="frame" x="18" y="31" width="96" height="16"/>
+                                <rect key="frame" x="18" y="159" width="96" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Alarm Features" id="CvL-yB-azE">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -115,8 +118,18 @@
                         </gridCell>
                         <gridCell row="Yq4-A2-Dhe" column="bDu-0l-gcS" id="NRG-gQ-l5E">
                             <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OPK-qG-L13">
-                                <rect key="frame" x="120" y="30" width="233" height="18"/>
+                                <rect key="frame" x="120" y="158" width="233" height="18"/>
                                 <buttonCell key="cell" type="check" title="Disable USB inputs when activated" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="FJD-M5-M1u">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
+                        </gridCell>
+                        <gridCell row="s0v-hZ-1Dl" column="FVs-La-vbr" id="uVF-x0-SkF"/>
+                        <gridCell row="s0v-hZ-1Dl" column="bDu-0l-gcS" id="YbK-Sk-gvd">
+                            <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xcn-TB-Ced">
+                                <rect key="frame" x="120" y="120" width="272" height="18"/>
+                                <buttonCell key="cell" type="check" title="Sound the alarm if USB inputs are altered" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="VaF-88-cJf">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
@@ -124,7 +137,7 @@
                         </gridCell>
                         <gridCell row="Eln-CP-WsM" column="FVs-La-vbr" id="mWz-b8-YYY">
                             <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F6p-jj-tk1">
-                                <rect key="frame" x="53" y="4" width="61" height="16"/>
+                                <rect key="frame" x="53" y="79" width="61" height="16"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Pin  code" id="K0d-TA-GIh">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -134,7 +147,7 @@
                         </gridCell>
                         <gridCell row="Eln-CP-WsM" column="bDu-0l-gcS" id="cjt-gI-L3l">
                             <segmentedControl key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vJF-3b-XS2">
-                                <rect key="frame" x="120" y="-1" width="92" height="24"/>
+                                <rect key="frame" x="120" y="74" width="100" height="24"/>
                                 <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="9Ez-FA-Jg2">
                                     <font key="font" metaFont="system"/>
                                     <segments>
@@ -147,6 +160,10 @@
                                 </connections>
                             </segmentedControl>
                         </gridCell>
+                        <gridCell row="U9s-Qo-HPW" column="FVs-La-vbr" id="IIu-bs-Vx5"/>
+                        <gridCell row="U9s-Qo-HPW" column="bDu-0l-gcS" id="OQj-MG-hgF"/>
+                        <gridCell row="q3K-sJ-Ttv" column="FVs-La-vbr" id="fRe-Tl-r8F"/>
+                        <gridCell row="q3K-sJ-Ttv" column="bDu-0l-gcS" id="Dhc-ZU-vD4"/>
                     </gridCells>
                 </gridView>
             </subviews>
@@ -157,7 +174,7 @@
                 <constraint firstItem="GOf-LN-LH2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DbU-zT-SbG" secondAttribute="leading" priority="750" constant="30" id="amE-VW-Njt"/>
                 <constraint firstAttribute="bottom" secondItem="GOf-LN-LH2" secondAttribute="bottom" priority="750" constant="20" id="ncK-2G-Tid"/>
             </constraints>
-            <point key="canvasLocation" x="105" y="219.5"/>
+            <point key="canvasLocation" x="105" y="299"/>
         </customView>
     </objects>
 </document>
